--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,9 @@
 {
 	"stylelint": {
 		"extends": "stylelint-config-standard",
-		"plugins": ["stylelint-order"],
+		"plugins": [
+			"stylelint-order"
+		],
 		"rules": {
 			"order/properties-alphabetical-order": true
 		}
