--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,10 +4,7 @@ cmd = node index.js
 
 all: tmp/all-done
 
-check: .dockerignore .gitignore Dockerfile package.json tmp
-	$(MAKE) $$(test -s style.css && printf 'tmp/check-css-done') $$(test -s index.html && printf 'tmp/check-html-done') tmp/check-js-done
-	if ls -ap | grep -v -E -x './|../|.dockerignore|.env|.gitignore|CNAME|Dockerfile|Makefile|docs/|index.html|index.js|package.json|prm/|python/|script.js|style.css|tmp/' | grep -q .; then false; fi
-	test $$(basename $$(pwd)) = "docs"
+check: tmp/check-done
 
 clean:
 	rm -rf tmp/
@@ -50,6 +47,12 @@ tmp/check-css-done: style.css
 		$$(docker image build --quiet .) /bin/sh -c '\
 		stylelint --fix style.css && \
 		css-validator --profile css3svg style.css'
+	touch $@
+
+tmp/check-done: .dockerignore .gitignore Dockerfile package.json tmp
+	$(MAKE) $$(test -s style.css && printf 'tmp/check-css-done') $$(test -s index.html && printf 'tmp/check-html-done') tmp/check-js-done
+	if ls -ap | grep -v -E -x './|../|.dockerignore|.env|.gitignore|CNAME|Dockerfile|Makefile|docs/|index.html|index.js|package.json|prm/|python/|script.js|style.css|tmp/' | grep -q .; then false; fi
+	test $$(basename $$(pwd)) = "docs"
 	touch $@
 
 tmp/check-html-done: index.html
